--- a/index.html
+++ b/index.html
@@ -13,10 +13,10 @@
   <body>
       <div class="container-fluid">
           <div class="row">
-              <div class="col-sm-6">
+              <div class="col-md-4 col-lg-6">
                   <canvas id="myChart"></canvas>
               </div>
-              <div class="col-sm-6">
+              <div class="col-md-8 col-lg-6">
                   <canvas id="myChart2"></canvas>
               </div>
           </div>
